testsuite/vhdl/syntax/test_data/label_mismatch/003_process.expected
label_mismatch/003_process:11:3: syntax error: Label mismatch in Process Statement
  Stimulus: process
  ~~~~~~~~ <<-- here
...
end process Stim; -- Stimulus vs. Stim
            ~~~~ <<-- and here
